--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="adobe-aft-efcs mb-5">
                     <img class="mb-3" src="./img/Vector (2).png" alt="adobe-aft-efcs img">
                     <h3>Adobe</h3>
-                    <h3>After effects</h3> 
+                    <h3>After Effects</h3> 
                     <p class="bi-star-fill d-inline"></p>
                     <p class="bi-star-fill d-inline"></p>
                     <p class="bi-star-fill d-inline"></p>
