--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <div class="portrait">
                 <img class="w-100 pt-5" src="./img/BSPP2266.png" alt="port">
             </div>
-            <div class="portrait-mob pt-5">
-                <img class="w-100" src="./img/BSPP2266 (1).png" alt="port">
+            <div class="portrait-mob ">
+                <img class="w-100 pt-5" src="./img/BSPP2266 (1).png" alt="port">
             </div>
         </div>
     </div>   
